--- a/.github/workflows/CD-docs.yml
+++ b/.github/workflows/CD-docs.yml
@@ -4,6 +4,8 @@ name: Deploy documentation to Pages
 on:
     push:
         branches: ['main']
+        paths:
+            - docs/**
 
     workflow_dispatch:
 
