chore(cargo): :recycle: Remove openssl requirement

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "crabrolls"
-version = "1.0.0"
+version = "1.0.1"
 edition = "2021"
 description = "High level framework for Rust-based dapps on Cartesi machines"
 repository = "https://github.com/crabrolls-cartesi/crabrolls"
@@ -9,7 +9,10 @@ license-file = "LICENSE"
 keywords = ["cartesi", "dapp", "blockchain", "rust", "high-level"]
 
 [dependencies]
-reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12.4", default-features = false, features = [
+	"json",
+	"rustls-tls",
+] }
 tokio = { version = "1.37.0", features = ["full"] }
 tokio-util = "0.7.11"
 ethers = "2.0.14"
