--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "crabrolls"
-version = "1.0.1"
+version = "1.1.0"
 edition = "2021"
 description = "High level framework for Rust-based dapps on Cartesi machines"
 repository = "https://github.com/crabrolls-cartesi/crabrolls"
@@ -9,14 +9,10 @@ license-file = "LICENSE"
 keywords = ["cartesi", "dapp", "blockchain", "rust", "high-level"]
 
 [dependencies]
-reqwest = { version = "0.12.4", default-features = false, features = [
-	"json",
-	"rustls-tls",
-] }
-tokio = { version = "1.37.0", features = ["full"] }
-tokio-util = "0.7.11"
-ethers = "2.0.14"
+ureq = { version = "2.9.7", features = ["json", "charset"] }
 serde = { version = "1.0.202", features = ["derive"] }
 serde_json = "1.0.117"
 log = "0.4.21"
 pretty_env_logger = "0.5.0"
+async-std = { version = "1.12.0", features = ["attributes", "std"] }
+hex = "0.4.3"
