--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,4 @@ log = "0.4.22"
 pretty_env_logger = "0.5.0"
 async-std = { version = "1.12.0", features = ["attributes", "std"] }
 hex = "0.4.3"
-num-bigint = "0.4.6"
+ethabi = "18.0.0"
