--- a/docs/package.json
+++ b/docs/package.json
@@ -1,23 +1,24 @@
 {
-	"name": "starlight-docs-template",
-	"type": "module",
-	"version": "0.0.1",
-	"scripts": {
-		"dev": "astro dev",
-		"start": "astro dev",
-		"build": "astro check && astro build",
-		"preview": "astro preview",
-		"astro": "astro"
-	},
-	"dependencies": {
-		"@astrojs/check": "0.9.2",
-		"@astrojs/starlight": "0.25.4",
-		"@expressive-code/plugin-line-numbers": "0.35.6",
-		"astro": "4.13.3",
-		"astro-expressive-code": "0.35.6",
-		"sharp": "0.33.4",
-		"starlight-image-zoom": "0.7.0",
-		"starlight-links-validator": "0.10.1",
-		"typescript": "5.5.4"
-	}
+  "name": "starlight-docs-template",
+  "type": "module",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro check && astro build",
+    "preview": "astro preview",
+    "astro": "astro"
+  },
+  "dependencies": {
+    "@astrojs/check": "0.9.2",
+    "@astrojs/starlight": "0.25.4",
+    "@expressive-code/plugin-line-numbers": "0.35.6",
+    "astro": "4.13.3",
+    "astro-expressive-code": "0.35.6",
+    "sharp": "0.33.4",
+    "starlight-image-zoom": "0.7.0",
+    "starlight-links-validator": "0.10.1",
+    "starlight-view-modes": "^0.6.0",
+    "typescript": "5.5.4"
+  }
 }
